<resources>
    <string name="app_name">Domaci</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ip">Lorem ip</string>
    <string name="dodaj_clana_porodice">Dodaj clana porodice</string>
    <string name="profil">Profil</string>
    <string name="savjeti">Savjeti</string>
    <string name="crnogorski">Crnogorski</string>
    <string name="izbrisi_profil">Izbrisi profil</string>
    <string name="odjavi_se">Odjavi se</string>
    <string name="item">﹀</string>
</resources>